--- a/about.html
+++ b/about.html
@@ -93,6 +93,16 @@
         </p>
       </div>
     </div>
+    <div class="p-3">
+      <div class="p-photo">
+        <img src="images/Screenshot_30-9-2024_17206_127.0.0.1.jpeg" alt="Rock-Paper-Scissors Game">
+      </div>
+      <div class="p-content">
+        <h4>Rock-Paper-Scissors Game</h4>
+        <p>A simple rock-paper-scissors game with single player mode against the computer.
+        </p>
+      </div>
+    </div>
   </div>
 
   <footer>
